[project]
name = "flowmol"
version = "0.1"
requires-python = ">=3.10,<3.11"
description = "Flow matching for 3D de novo molecule generation"
authors = [
    { name = "Ian Dunn", email = "ian.dunn@pitt.edu" }
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Specify the dependencies
dependencies = [
    "torch==2.2.0 @ https://download.pytorch.org/whl/cu121",
    "torchvision @ https://download.pytorch.org/whl/cu121",
    "torchaudio @ https://download.pytorch.org/whl/cu121",
    "torch-cluster==1.6.3",
    "torch-scatter==2.1.2",
    "dgl @ https://data.dgl.ai/wheels/torch-2.2/cu121/dgl-2.2.0%2Bcu121-cp310-cp310-manylinux1_x86_64.whl",
    "pytorch-lightning==2.1.3",
    "wandb",
    "einops",
    "pystow",
    "useful_rdkit_utils",
    "rdkit=2023.09.4",
]