[metadata]
name = flowmol
version = 0.0.1
description = Mixed continuous and categorical flow matching for 3D de novo molecule generation. 
author = Ian Dunn
author_email = ian.dunn@pitt.edu
url = https://github.com/dunni3/FlowMol

[options]
packages = find:

[options.packages.find]
include = flowmol*